--- a/app/views/website_posts/new.html.haml
+++ b/app/views/website_posts/new.html.haml
@@ -8,8 +8,8 @@
       %div{:style => "margin-top: 27px;" }
         Thumbnail (optional):
     .form-inputs
-      = f.input :title, :label => false
-      = f.input :url, :label => false
+      = f.input :title, :label => false, :style => "width: 271px;"
+      = f.input :url, :label => false, :style => "width: 271px;"
       = f.text_area :description, :label => false, :style => "height: 40px; width: 271px;"
       %br/
       = f.file_field :thumbnail
